# sk-visualize-aim-and-grip

./: CMakeLists.txt  LICENSE
src/: main.cpp  randoviz.hpp
